# talos-check

./: .containerignore  Containerfile  README.md  check_talos_version  manifest.yaml  pyproject.toml
.github/workflows/: container-build.yml
manifest-builder/: Cargo.toml
manifest-builder/src/: main.rs
talos/: README.md  http.py
talos-check-rs/: Cargo.toml
talos-check-rs/src/: lib.rs  main.rs  meta.rs  rbac.rs  util.rs  workload.rs
talos_check/: __init__.py  http.py  httpd.py
