[package]
name = "talos-check-manifest-builder"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
krust-manifesto = { git = "https://github.com/alexpdp7/krust-manifesto", version = "0.1.0" }
k8s-openapi = { version = "0.18.0", features = ["v1_26"], default_features = false }
