[package]
name = "talos-check-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "0.82.2", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.18.0", features = ["v1_26"] }
serde_yaml = "0.9.21"
serde = "1.0.163"
clap = { version = "4.2.7", features = ["derive"] }
